[package]
name = "todomvc-respo-rs"
version = "0.0.1"
edition = "2021"
description = "a tiny virtual DOM library migrated from ClojureScript"
license = "Apache-2.0"
repository = "https://github.com/Respo/respo.rs"
homepage = "http://respo-mvc.org"
documentation = "https://docs.rs/crate/respo/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = [ "derive" ] }
uuid = { version = "1.1.2", features = [ "v4", "js" ] }
respo = "0.0.13"
# respo = { path = "/Users/chenyong/repo/respo/rs.respo/" }

[dependencies.web-sys]
version = "0.3.58"
features = [
  "console",
  'Document',
  "HtmlHeadElement",
  'Element',
  'Window',
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "MouseEvent",
  "KeyboardEvent",
  "InputEvent",
  "Node",
  "NodeList",
  "Element",
  "HtmlCollection",
  "CssStyleDeclaration",
  "FocusEvent",
  "HtmlLabelElement",
]
