[package]
name = "todomvc-respo-rs"
version = "0.0.1"
edition = "2021"
description = "a tiny virtual DOM library migrated from ClojureScript"
license = "Apache-2.0"
repository = "https://github.com/Respo/respo.rs"
homepage = "http://respo-mvc.org"
documentation = "https://docs.rs/crate/respo/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = [ "derive" ] }
serde_json = "1.0.117"
uuid = { version = "1.9.1", features = [ "v4", "js" ] }
respo = "0.1.9"
# respo = { path = "/Users/chenyong/repo/respo/rs.respo/" }
respo_state_derive = "0.0.1"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "console",
  'Document',
  "HtmlHeadElement",
  'Element',
  'Window',
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "MouseEvent",
  "KeyboardEvent",
  "InputEvent",
  "Node",
  "NodeList",
  "Element",
  "HtmlCollection",
  "CssStyleDeclaration",
  "FocusEvent",
  "HtmlLabelElement",
]
